--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Aplicativo básico em node.js aula de DevOps",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -20,5 +20,8 @@
   "bugs": {
     "url": "https://github.com/rodrigojmcosta/AplicacaoNodeAula/issues"
   },
-  "homepage": "https://github.com/rodrigojmcosta/AplicacaoNodeAula#readme"
+  "homepage": "https://github.com/rodrigojmcosta/AplicacaoNodeAula#readme",
+  "dependencies": {
+    "jest": "^27.2.0"
+  }
 }
